fixed wrapping on home 2 prob section

--- a/style.css
+++ b/style.css
@@ -364,6 +364,12 @@ footer p {
     min-height: 70vh;
     background-color: rgb(255, 255, 255);
     padding-bottom: 50px;
+    max-width: 100vw;
+
+    display: flex; /* Use flexbox to align items in a row */
+    align-items: center; /* Center items vertically */
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .sec2c img {
@@ -386,6 +392,11 @@ footer p {
 #prob2 {
     padding-top:50px;
     gap: var(--viewport-gap2);
+    max-width: 100vw;
+    display: flex; /* Use flexbox to align items in a row */
+    align-items: center; /* Center items vertically */
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .headbar p {
